# Signal-Quality-Assessment

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  get_optimal_step.py  grid_search.py  main.py  optuna_search.py  pyproject.toml  setup.cfg  setup.sh  step_winlen_plotting.py
data/: 0702  межвитковые фазы A ток фазы А.txt  0702  перекос фазы A ток фазы А.txt  0702 без перекосов фаза A.txt  20_01_1460_об_мин_с_дисбалансом_ротора.txt  21 02 дисбаланс макс обороты 100%.txt
data/processed/: 0702 без перекосов фаза A.csv  0702 без перекосов фаза A_metadata.txt  data-sample-MIREA.csv  data-sample_motor-operating-at-100%-load_metadata.txt
data/raw/: 0702 без перекосов фаза A.txt  data-sample-MIREA.csv
res/: result.yml
src/: data_preprocessing.py  quality_assessment.py  utils.py  vis.py
